--- a/app/src/main/res/layout/row_favorite.xml
+++ b/app/src/main/res/layout/row_favorite.xml
@@ -13,7 +13,7 @@
     <RelativeLayout
         android:id="@+id/viewCardDetails"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:paddingTop="@dimen/dp_10"
         android:layout_marginTop="@dimen/dp_1"
         android:paddingBottom="@dimen/dp_10"
