--- a/app/src/main/res/menu/activity_book_service_drawer.xml
+++ b/app/src/main/res/menu/activity_book_service_drawer.xml
@@ -23,6 +23,11 @@
             android:icon="@drawable/ic_record"
             android:title="@string/str_menu_record" />
 
+    <item
+        android:id="@+id/nav_editProfile"
+        android:icon="@drawable/edit_icon"
+        android:title="@string/str_edit_profile" />
+
 
         <item
             android:id="@+id/nav_scheduled"
