--- a/app/src/main/res/layout/fragment_completed_record.xml
+++ b/app/src/main/res/layout/fragment_completed_record.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_above="@+id/linearLoadMore"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/dp_10"
+        android:layout_marginTop="@dimen/dp_10"
         android:id="@+id/recordList"/>
     <TextView
         android:id="@+id/txtNorecords"
