--- a/app/src/main/res/layout/layout_price_estimated.xml
+++ b/app/src/main/res/layout/layout_price_estimated.xml
@@ -14,7 +14,7 @@
         android:id="@+id/txtPriceEstimated"
         android:textColor="@android:color/white"
         android:textSize="@dimen/sp_20"
-        android:text="C$ 80.00"
+        android:text=""
         android:layout_centerHorizontal="true"
         android:textStyle="bold|italic"/>
 
