--- a/app/src/main/res/layout/row_driver_records.xml
+++ b/app/src/main/res/layout/row_driver_records.xml
@@ -2,6 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginLeft="@dimen/dp_10"
+    android:layout_marginRight="@dimen/dp_10"
+    android:layout_marginTop="@dimen/dp_10"
     android:background="@android:color/transparent"
     android:layout_marginBottom="@dimen/dp_7">
 
@@ -41,6 +44,16 @@
                  android:textSize="@dimen/sp_14"
                  android:layout_alignParentTop="true"
                  android:text=""/>
+
+             <TextView
+                 android:id="@+id/txtdateTime"
+                 android:layout_below="@+id/txtNamePhone"
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:textColor="@color/colorPrimary"
+                 android:textStyle="bold|italic"
+                 android:textSize="@dimen/sp_12"
+                 android:text=""/>
              <TextView
                  android:id="@+id/txtSource"
                  android:layout_width="wrap_content"
@@ -50,7 +63,7 @@
                  android:textSize="@dimen/sp_12"
                  android:layout_marginRight="@dimen/dp_2"
                  android:layout_alignParentLeft="true"
-                 android:layout_below="@+id/txtNamePhone"
+                 android:layout_below="@+id/txtdateTime"
                  android:layout_toLeftOf="@+id/viewPriceEstimated"
                  android:text="@string/str_collect"/>
 
