--- a/app/src/main/res/layout/view_driver_upcoming.xml
+++ b/app/src/main/res/layout/view_driver_upcoming.xml
@@ -3,7 +3,6 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:id="@+id/frame"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/bg_app"
     android:layout_height="wrap_content">
 
     <RelativeLayout
@@ -12,7 +11,6 @@
         android:background="@drawable/bg_accept_order"
         android:layout_marginLeft="@dimen/dp_30"
         android:layout_marginTop="@dimen/dp_30"
-
         android:layout_marginRight="@dimen/dp_10"
         android:minHeight="160dp"
         android:layout_height="wrap_content">
@@ -21,11 +19,11 @@
             android:id="@+id/txtARName"
             android:textColor="@color/colorPrimaryDark"
             android:layout_width="wrap_content"
-            android:text=". Dev bhandari ."
+            android:text=""
             android:layout_marginTop="@dimen/dp_7"
             android:textStyle="bold|italic"
             android:textSize="@dimen/sp_16"
-            android:layout_marginLeft="@dimen/dp_50"
+            android:layout_marginLeft="@dimen/dp_30"
             android:layout_height="wrap_content"/>
 
 
@@ -33,7 +31,7 @@
             android:id="@+id/txtARPhone"
             android:textColor="@color/colorPrimaryDark"
             android:layout_width="wrap_content"
-            android:text="+918126525293"
+            android:text=""
             android:layout_marginLeft="@dimen/dp_5"
             android:layout_toRightOf="@+id/txtARName"
             android:layout_marginRight="@dimen/dp_2"
@@ -41,6 +39,17 @@
             android:textStyle="bold|italic"
             android:textSize="@dimen/sp_16"
             android:layout_height="wrap_content"/>
+
+        <TextView
+            android:id="@+id/txtdateTime"
+            android:layout_below="@+id/txtARName"
+            android:layout_marginLeft="@dimen/dp_30"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorPrimary"
+            android:textStyle="bold|italic"
+            android:textSize="@dimen/sp_12"
+            android:text=""/>
 
 
         <include
@@ -68,7 +77,7 @@
                 android:id="@+id/txtARSource"
                 android:textColor="@color/colorPrimary"
                 android:layout_width="wrap_content"
-                android:text="Source: panama city panama"
+                android:text=""
                 android:textStyle="italic"
                 android:textSize="@dimen/sp_12"
                 android:layout_height="wrap_content"/>
@@ -79,7 +88,7 @@
                 android:textColor="@color/colorPrimary"
                 android:layout_width="wrap_content"
                 android:layout_marginTop="@dimen/dp_5"
-                android:text="Destination: panama city panama"
+                android:text=""
                 android:textStyle="italic"
                 android:textSize="@dimen/sp_12"
                 android:layout_height="wrap_content"/>
@@ -96,24 +105,21 @@
             <Button
                 android:id="@+id/btnStart"
                 android:layout_width="wrap_content"
+                android:layout_gravity="center_horizontal"
                 android:layout_height="wrap_content"
                 android:text="Start"/>
 
 
-            <Button
-                android:id="@+id/btnComplete"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/dp_10"
-                android:text="Complete"/>
+
         </LinearLayout>
 
     </RelativeLayout>
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imgAcceptreject"
-        android:layout_width="@dimen/dp_60"
-        android:layout_height="@dimen/dp_60"
+        android:layout_width="@dimen/dp_50"
+        android:layout_height="@dimen/dp_50"
+        android:layout_marginLeft="@dimen/dp_3"
         android:src="@drawable/default_profile_photo"
         app:civ_border_color="@color/civ_border"
         android:layout_gravity="left|top"
