--- a/app/src/main/res/layout/activity_accept_order.xml
+++ b/app/src/main/res/layout/activity_accept_order.xml
@@ -2,6 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:id="@+id/topRelative"
+    android:visibility="gone"
     android:layout_height="match_parent"
     android:background="#e6000000"
     tools:context="com.hoffmans.rush.ui.driver.activities.AcceptOrderActivity">
