--- a/app/src/main/res/layout/fragment_upcoming.xml
+++ b/app/src/main/res/layout/fragment_upcoming.xml
@@ -20,7 +20,7 @@
 
 
     <TextView
-        android:id="@+id/txtNorecords"
+        android:id="@+id/txtNoRecords"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
