--- a/app/src/main/res/layout/view_driver_upcoming.xml
+++ b/app/src/main/res/layout/view_driver_upcoming.xml
@@ -5,94 +5,108 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="wrap_content">
 
+
+
     <RelativeLayout
         android:id="@+id/rel"
         android:layout_width="match_parent"
-        android:background="@drawable/bg_accept_order"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/dp_30"
-        android:layout_marginTop="@dimen/dp_30"
         android:layout_marginRight="@dimen/dp_10"
-        android:minHeight="160dp"
-        android:layout_height="wrap_content">
+        android:layout_marginTop="@dimen/dp_30"
+        android:background="@drawable/bg_accept_order"
+        android:minHeight="160dp">
 
         <TextView
             android:id="@+id/txtARName"
-            android:textColor="@color/colorPrimaryDark"
             android:layout_width="wrap_content"
-            android:text=""
-            android:layout_marginTop="@dimen/dp_7"
-            android:textStyle="bold|italic"
-            android:textSize="@dimen/sp_16"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/dp_30"
-            android:layout_height="wrap_content"/>
+            android:layout_marginTop="@dimen/dp_7"
+            android:text=""
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="@dimen/sp_16"
+            android:textStyle="bold|italic" />
 
 
         <TextView
             android:id="@+id/txtARPhone"
-            android:textColor="@color/colorPrimaryDark"
-            android:layout_width="wrap_content"
-            android:text=""
-            android:layout_marginLeft="@dimen/dp_5"
-            android:layout_toRightOf="@+id/txtARName"
-            android:layout_marginRight="@dimen/dp_2"
-            android:layout_marginTop="@dimen/dp_7"
-            android:textStyle="bold|italic"
-            android:textSize="@dimen/sp_16"
-            android:layout_height="wrap_content"/>
-
-        <TextView
-            android:id="@+id/txtdateTime"
-            android:layout_below="@+id/txtARName"
-            android:layout_marginLeft="@dimen/dp_30"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/colorPrimary"
+            android:layout_marginLeft="@dimen/dp_5"
+            android:layout_marginRight="@dimen/dp_2"
+            android:layout_marginTop="@dimen/dp_7"
+            android:layout_toRightOf="@+id/txtARName"
+            android:text=""
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="@dimen/sp_16"
+            android:textStyle="bold|italic" />
+
+
+
+        <TextView
+            android:id="@+id/txtNoRecords"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:visibility="gone"
+            android:textSize="@dimen/sp_17"
+            android:textColor="@android:color/white"
             android:textStyle="bold|italic"
+            android:text="You have no current order." />
+        <TextView
+            android:id="@+id/txtdateTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/txtARName"
+            android:layout_marginLeft="@dimen/dp_30"
+            android:text=""
+            android:textColor="@color/colorPrimary"
             android:textSize="@dimen/sp_12"
-            android:text=""/>
+            android:textStyle="bold|italic" />
 
 
         <include
             android:id="@+id/viewPriceEstimated"
+            layout="@layout/layout_price_estimated"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dp_20"
-            android:layout_marginLeft="@dimen/dp_20"
+            android:layout_alignParentLeft="true"
             android:layout_below="@+id/txtARName"
             android:layout_centerVertical="true"
-            android:layout_alignParentLeft="true"
-            layout="@layout/layout_price_estimated"/>
+            android:layout_marginLeft="@dimen/dp_20"
+            android:layout_marginTop="@dimen/dp_20" />
 
         <LinearLayout
             android:id="@+id/linearSourceDestination"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:layout_alignTop="@+id/viewPriceEstimated"
-            android:layout_marginTop="@dimen/dp_3"
             android:layout_below="@+id/txtARName"
+            android:layout_marginLeft="@dimen/dp_20"
+            android:layout_marginTop="@dimen/dp_3"
             android:layout_toRightOf="@+id/viewPriceEstimated"
-            android:layout_marginLeft="@dimen/dp_20">
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/txtARSource"
-                android:textColor="@color/colorPrimary"
                 android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text=""
-                android:textStyle="italic"
+                android:textColor="@color/colorPrimary"
                 android:textSize="@dimen/sp_12"
-                android:layout_height="wrap_content"/>
+                android:textStyle="italic" />
 
 
             <TextView
                 android:id="@+id/txtARDestination"
-                android:textColor="@color/colorPrimary"
                 android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dp_5"
                 android:text=""
-                android:textStyle="italic"
+                android:textColor="@color/colorPrimary"
                 android:textSize="@dimen/sp_12"
-                android:layout_height="wrap_content"/>
+                android:textStyle="italic" />
 
         </LinearLayout>
 
@@ -100,22 +114,21 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/linearSourceDestination"
-            android:orientation="horizontal"
             android:layout_marginTop="@dimen/dp_20"
-            android:gravity="center_horizontal">
+            android:gravity="center_horizontal"
+            android:orientation="horizontal">
+
             <Button
                 android:id="@+id/btnStart"
                 android:layout_width="wrap_content"
-                android:layout_gravity="center_horizontal"
                 android:layout_height="wrap_content"
-                android:text="Start"/>
-
+                android:layout_gravity="center_horizontal"
+                android:text="Start" />
 
 
         </LinearLayout>
 
     </RelativeLayout>
-
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imgAcceptreject"
         android:layout_width="@dimen/dp_50"
@@ -125,11 +138,5 @@
         app:civ_border_color="@color/civ_border"
         android:layout_gravity="left|top"
         />
-
-
-
-
-
-
 
 </FrameLayout>
