--- a/app/src/main/res/layout/view_rating.xml
+++ b/app/src/main/res/layout/view_rating.xml
@@ -35,22 +35,33 @@
             android:text="+918126525293"
             android:layout_marginLeft="@dimen/dp_3"
             android:layout_toRightOf="@+id/txtRName"
-            android:layout_marginRight="@dimen/dp_2"
+            android:layout_marginRight="@dimen/dp_10"
             android:layout_marginTop="@dimen/dp_7"
             android:textStyle="bold|italic"
             android:textSize="@dimen/sp_15"
             android:layout_height="wrap_content"/>
 
         <RatingBar
+            android:id="@+id/ratingBAr"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
+            android:layout_below="@+id/txtRName"
+            android:layout_marginTop="@dimen/dp_20"
+            android:layout_centerHorizontal="true"
             android:numStars="3"
             android:stepSize="1"
             android:isIndicator="false"
             android:rating="3"
             />
 
+        <Button
+            android:id="@+id/btnsubmitRating"
+            android:layout_marginTop="@dimen/dp_20"
+            android:layout_centerHorizontal="true"
+            android:layout_width="wrap_content"
+            android:layout_below="@+id/ratingBAr"
+            android:layout_height="wrap_content"
+            android:text="Submit"/>
 
     </RelativeLayout>
 
