--- a/app/src/main/res/menu/menu_driver_navigation.xml
+++ b/app/src/main/res/menu/menu_driver_navigation.xml
@@ -18,6 +18,10 @@
         android:title="@string/str_menu_record" />
 
     <item
+        android:id="@+id/nav_editProfile"
+        android:icon="@drawable/edit_icon"
+        android:title="@string/str_edit_profile"/>
+    <item
         android:id="@+id/nav_logout"
         android:icon="@drawable/ic_logout"
         android:title="@string/str_menu_logout" />
