--- a/app/src/main/res/layout/fragment_upcoming.xml
+++ b/app/src/main/res/layout/fragment_upcoming.xml
@@ -23,7 +23,8 @@
         android:id="@+id/txtNoRecords"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="@dimen/dp_50"
         android:visibility="gone"
         android:textSize="@dimen/sp_16"
         android:textColor="@android:color/white"
