--- a/app/src/main/res/menu/menu_driver_navigation.xml
+++ b/app/src/main/res/menu/menu_driver_navigation.xml
@@ -9,7 +9,7 @@
 
     <item
         android:id="@+id/nav_Upcoming"
-        android:icon="@drawable/ic_record"
+        android:icon="@drawable/ic_schedule"
         android:title="Upcoming" />
 
     <item
