--- a/app/src/main/res/layout/activity_accept_order.xml
+++ b/app/src/main/res/layout/activity_accept_order.xml
@@ -7,13 +7,13 @@
     android:layout_height="match_parent"
     android:background="#e6000000"
     tools:context="com.hoffmans.rush.ui.driver.activities.AcceptOrderActivity">
-    <ImageView
+    <!--<ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="@dimen/dp_7"
         android:id="@+id/imgARClose"
         android:layout_alignParentRight="true"
-        android:src="@drawable/ic_close_red"/>
+        android:src="@drawable/ic_close_red"/>-->
 
     <RelativeLayout
         android:layout_width="match_parent"
