--- a/app/src/main/res/layout/header_upcoming.xml
+++ b/app/src/main/res/layout/header_upcoming.xml
@@ -27,11 +27,11 @@
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/dp_4"
         android:textColor="@color/colorPrimaryDark"
-        android:textSize="@dimen/sp_17"
+        android:textSize="@dimen/sp_15"
         android:textStyle="bold|italic"
         android:visibility="gone"
         android:layout_gravity="center_horizontal"
-        android:text="No upcoming order."
+        android:text="You don't have order right now!"
         android:paddingLeft="@dimen/dp_10"
         android:paddingBottom="@dimen/dp_4"
         android:layout_marginTop="@dimen/dp_30"
