Spanish string changes ,Local locale change broadcast receiver

--- a/app/src/main/res/layout/driver_edit_profile.xml
+++ b/app/src/main/res/layout/driver_edit_profile.xml
@@ -109,7 +109,7 @@
                     android:layout_alignParentRight="true"
                     android:layout_centerInParent="true"
 
-                    android:text="edit"
+                    android:text="@string/str_edit"
                     android:gravity="center"
                     android:textSize="@dimen/sp_12"
                     android:padding="@dimen/dp_4"
@@ -155,7 +155,7 @@
                     android:layout_alignParentRight="true"
                     android:layout_centerInParent="true"
                     android:layout_gravity="center|right"
-                    android:text="edit"
+                    android:text="@string/str_edit"
                     android:gravity="center"
                     android:textSize="@dimen/sp_12"
                     android:padding="@dimen/dp_4"
@@ -197,7 +197,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:layout_centerInParent="true"
-                    android:text="edit"
+                    android:text="@string/str_edit"
                     android:textSize="@dimen/sp_14"
                     android:padding="@dimen/dp_4"
                     android:visibility="invisible"
@@ -246,7 +246,7 @@
                     android:layout_alignParentRight="true"
                     android:layout_centerInParent="true"
                     android:layout_gravity="center_vertical"
-                    android:text="edit"
+                    android:text="@string/str_edit"
                     android:textSize="@dimen/sp_14"
                     android:padding="@dimen/dp_4"
                     android:visibility="invisible"
@@ -325,7 +325,7 @@
                     android:id="@+id/editablePhone"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:text="edit"
+                    android:text="@string/str_edit"
                     android:textSize="@dimen/sp_12"
                     android:padding="@dimen/dp_4"
                     android:layout_alignParentRight="true"
