--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -187,10 +187,32 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dp_20"
-
                 android:text="@string/str_create_account"
-
                 style="@style/AppTheme.Button"/>
+
+
+           <RelativeLayout
+               android:layout_width="wrap_content"
+               android:layout_marginTop="@dimen/dp_10"
+               android:layout_height="wrap_content">
+               <CheckBox
+                   android:id="@+id/checkboxTermsCondition"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:layout_centerVertical="true"
+
+                   android:padding="@dimen/dp_3"
+
+                   />
+                 <TextView
+                     android:id="@+id/txtTermsAndCondition"
+                     android:layout_width="wrap_content"
+                     android:layout_centerVertical="true"
+                     android:layout_height="wrap_content"
+                     android:layout_toRightOf="@+id/checkboxTermsCondition"
+                     />
+               </RelativeLayout>
+
 
             <TextView
                 android:layout_width="wrap_content"
